...

sealed class NavTab(
    val route: String,
    val icon: ImageVector,
    val label: String
) {
    object Inicio : NavTab("home", Icons.Filled.Home, "Inicio")
    object Mapa : NavTab("mapa", Icons.Filled.LocationOn, "Mapa")
    object Incidencias : NavTab("incidencias", Icons.Filled.Warning, "Incidencias")
    object Reservas : NavTab("reservas", Icons.Filled.DateRange, "Reservas")
}


...
