...
            // Logo adaptativo de la aplicación
            LogoCarCare(
                size = 150.dp
            )

            Text(
                text = "Bienvenido a",
                fontSize = 24.sp,
                fontWeight = FontWeight.Bold,
                color = MaterialTheme.colorScheme.onBackground
            )

            Text(
...
